<resources>
    <string name="app_name">DarkoDimitrijevicRN9418</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter username</string>
    <string name="pin">PIN</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="student_helper_app">Student helper app</string>
    <string name="login">LOGIN</string>
    <string name="dash">-</string>
    <string name="professor">Professor:</string>
    <string name="classroom">Classroom:</string>
    <string name="groups">Groups:</string>
    <string name="type">Type:</string>
    <string name="find">Find</string>
    <string name="title_professor">Title/Professor</string>
    <string name="search_by_title_or_content">Search by title or content</string>
    <string name="title">Title</string>
    <string name="close">Close</string>
    <string name="create">Create</string>
    <string name="content">Content</string>
    <string name="edit">Edit</string>
</resources>
