<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--    NOTE TITLE  -->
    <EditText
        android:id="@+id/et_note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="20dp"
        android:hint="@string/title"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <!--    NOTE CONTENT    -->
    <EditText
        android:id="@+id/et_note_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:hint="@string/content"
        android:gravity="top"
        app:layout_constraintTop_toBottomOf="@+id/et_note_title"
        app:layout_constraintBottom_toTopOf="@+id/btn_create_note_success"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <!--    BUTTON CREATE NOTE  -->
    <Button
        android:id="@+id/btn_create_note_close"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_create_note_success"
        />


    <!--    BUTTON CREATE NOTE  -->
    <Button
        android:id="@+id/btn_create_note_success"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_create_note_close"
        app:layout_constraintEnd_toEndOf="parent"
        />


    
</androidx.constraintlayout.widget.ConstraintLayout>