<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/ic_login"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/student_helper_app"
                android:textSize="22sp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginBottom="40dp" />

            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:layout_margin="30dp"
                android:layout_gravity="center"
                android:gravity="center"
                />

            <EditText
                android:id="@+id/login_pin"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/pin"
                android:layout_gravity="center"
                android:gravity="center"
                />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginTop="90dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@color/darkGray"
                android:textColor="@color/colorWhite"
                />



        </LinearLayout>

    </ScrollView>

</LinearLayout>