<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="#83AAA8A7"
        >

        <!--    SCHOOL CLASS NAME   -->
        <TextView
            android:id="@+id/tv_note_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />


        <!--    SCHOOL CLASS TYPE   -->
        <TextView
            android:id="@+id/tv_school_class_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:text="@string/type"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_note_title"
            />

        <!--    SCHOOL CLASS TYPE REAL VALUE  -->
        <TextView
            android:id="@+id/tv_school_class_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/tv_school_class_type_label"
            app:layout_constraintTop_toTopOf="@+id/tv_school_class_type_label"
            />

        <!--    PROFESSOR   -->
        <TextView
            android:id="@+id/tv_professor_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/professor"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_school_class_type_label"
            app:layout_constraintStart_toStartOf="parent"
            />

        <!--    PROFESSOR REAL VALUE   -->
        <TextView
            android:id="@+id/tv_professor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/tv_professor_label"
            app:layout_constraintStart_toEndOf="@id/tv_professor_label"
            />

        <!--    CLASSROOM   -->
        <TextView
            android:id="@+id/tv_classroom_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classroom"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_professor_label"
            app:layout_constraintStart_toStartOf="parent"
            />

        <!--    CLASSROOM REAL VALUE   -->
        <TextView
            android:id="@+id/tv_classroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_professor_label"
            app:layout_constraintStart_toEndOf="@id/tv_classroom_label"
            />


        <!--    GROUPS   -->
        <TextView
            android:id="@+id/tv_groups_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/groups"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_classroom_label"
            app:layout_constraintStart_toStartOf="parent"
            />

        <!--    GROUPS REAL VALUE   -->
        <TextView
            android:id="@+id/tv_groups"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_classroom_label"
            app:layout_constraintStart_toEndOf="@id/tv_groups_label"
            />


        <!--    DAY   -->
        <TextView
            android:id="@+id/tv_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="PON"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_time"
            />


        <!--    TIME   -->
        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="13:30"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>